# chat

./: .clippy.toml  .gitignore  Cargo.toml  Makefile.toml  README.md  cspell.json  index.html  rustfmt.toml
chat/: Cargo.toml  index.html
chat/src/: main.rs  route.rs
chat/src/components/: account.rs  avatar.rs  avatar_multitude.rs  button.rs  chat.rs  chat_box.rs  chat_groups_list.rs  chat_list.rs  chat_message.rs  chat_text.rs  dropdown.rs  fake_set.rs  image_message.rs  input.rs  mod.rs  nav_item.rs  register.rs  search.rs  service.rs  side.rs  text.rs  user_list.rs  video_stream.rs  voice_input.rs  voice_message.rs  wave_test.rs
chat/src/hook/: mod.rs  use_chat.rs  use_client.rs  use_client_init.rs  use_client_message_watch.rs  use_fake_set.rs  use_i18n.rs  use_init.rs  use_media_request_watch.rs  use_movement.rs  use_theme.rs  use_user_list_watch.rs  use_wave_recorder.rs  use_wave_surfer.rs  use_ws_message_watch.rs
chat/src/model/: channel_message.rs  chat_history.rs  mod.rs
chat/src/page/: chat.rs  mod.rs  not_found.rs  user.rs
chat/src/store/: chat.rs  chat_groups.rs  client.rs  history_message.rs  media_request.rs  mod.rs  refresh.rs  theme.rs  user.rs  volume.rs
chat/src/utils/: client.rs  faker.rs  global.rs  i18n.rs  link.rs  mod.rs  request.rs  rtc_link.rs  sdp_sender.rs  util.rs  wave_progress.rs  wave_recorder.rs  wave_surfer.rs  webrtc.rs  websocket.rs
client/: Cargo.toml  Trunk.toml  build.rs  index.html
client/locales/: en.json  zh.json
client/src/: app.rs  crypto.rs  flow_control.rs  i18n.rs  main.rs  pip.rs  sticker.rs  utils.rs  vad.rs
client/src/call/: call_controls.rs  call_overlay.rs  call_video_area.rs  mod.rs  types.rs  video_grid.rs
client/src/chat/: chat_header.rs  chat_input_bar.rs  chat_search.rs  chat_search_bar.rs  drag_overlay.rs  drag_upload.rs  helpers.rs  mention.rs  mention_dropdown.rs  message_bubble.rs  message_list.rs  mod.rs  reply_bar.rs  sticker_panel.rs  voice_bubble.rs  voice_recorder.rs  voice_recording_bar.rs
client/src/components/: avatar.rs  button.rs  input.rs  misc.rs  mod.rs  modal.rs  modal_manager.rs  toast.rs  virtual_list.rs
client/src/network_quality/: manager.rs  mod.rs  tests.rs  types.rs
client/src/pages/: chat_view.rs  login.rs  mod.rs  room_view.rs  settings.rs
client/src/services/: mod.rs
client/src/state/: chat.rs  connection.rs  mod.rs  network_quality.rs  online_users.rs  provider.rs  room.rs  search.rs  tests.rs  theater.rs  theme.rs  ui.rs  user.rs  vad.rs
client/src/storage/: db.rs  helpers.rs  mod.rs  search.rs
client/src/theater/: danmaku.rs  mod.rs  source_picker.rs
client/src/transfer/: mod.rs  ui.rs
client/style/: _base.css  _call.css  _chat.css  _components.css  _drag_upload.css  _file_transfer.css  _indicators.css  _login.css  _messages.css  _modals.css  _panels.css  _profile.css  _search.css  _sidebar.css  _theater.css  _utilities.css  _variables.css  main.css
css-processor/: Cargo.toml
css-processor/src/: main.rs  sse.rs  watcher.rs
css-processor/src/processor/: mod.rs  tests.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  css-hook.sh  index.html  strip-dev-hot-reload.sh
frontend/locales/: en.json  zh-CN.json
frontend/src/: app.rs  chat_view.rs  config.rs  debug_panel.rs  home_page.rs  i18n_helpers.rs  lib.rs  logging.rs  modal_manager.rs  reconnect_banner.rs  settings_page.rs  state.rs  toast_container.rs  top_bar.rs  utils.rs
frontend/src/auth/: auth_page.rs  jwt.rs  login_form.rs  mod.rs  register_form.rs  service.rs  tests.rs  types.rs  utils.rs
frontend/src/blacklist/: mod.rs  tests.rs
frontend/src/call/: media.rs  mod.rs  notifier.rs  stats.rs  types.rs  vad.rs  wasm_tests.rs
frontend/src/chat/: ack_queue.rs  manager.rs  markdown.rs  mention.rs  mod.rs  models.rs  read_batch.rs  routing.rs  tests.rs
frontend/src/chat_view/: forward_modal.rs  helpers.rs  image_picker.rs  image_preview.rs  input_bar.rs  message_bubble.rs  message_list.rs  mod.rs  sticker_panel.rs  typing_indicator.rs  view_root.rs
frontend/src/components/: home_page.rs  mod.rs  modal_manager.rs  reconnect_banner.rs  settings_page.rs  top_bar.rs
frontend/src/config/: mod.rs  tests.rs
frontend/src/error_handler/: error_toast_container.rs  manager.rs  mod.rs  tests.rs
frontend/src/file_transfer/: dispatch.rs  hash.rs  inbound.rs  integration_tests.rs  manager.rs  mod.rs  receive.rs  send.rs  tests.rs  thumbnail.rs  types.rs  wasm_tests.rs
frontend/src/i18n_helpers/: tests.rs
frontend/src/identicon/: mod.rs  tests.rs
frontend/src/invite/: mod.rs  models.rs  tests.rs
frontend/src/logging/: mod.rs  tests.rs
frontend/src/persistence/: idb.rs  mod.rs  record.rs  retention.rs  schema.rs  search.rs  tests.rs  wasm_tests.rs
frontend/src/sidebar/: mod.rs
frontend/src/signaling/: mod.rs
frontend/src/state/: mod.rs  tests.rs
frontend/src/user_status/: mod.rs  tests.rs
frontend/src/webrtc/: broadcast.rs  crypto_ops.rs  data_channel.rs  encryption.rs  handshake.rs  mod.rs  peer_connection.rs  raw_frame.rs  tests.rs
frontend/styles/: base.css  main.css  reset.css  tokens.css  utilities.css
frontend/styles/components/: auth.css  call.css  (+14 more)
frontend/tests/: web.rs
message/: Cargo.toml
message/src/: action_channel.rs  call_channel.rs  channel.rs  chat.rs  connect_channel.rs  datachannel.rs  envelope.rs  error.rs  frame.rs  lib.rs  media_channel.rs  message.rs  room.rs  signal.rs  signal_channel.rs  signaling.rs  transfer.rs  types.rs  user.rs  wasm.rs
message/tests/: chat_test.rs  envelope_test.rs  signal_test.rs  transfer_test.rs
sdp/: Cargo.toml
sdp/src/: client.rs  data.rs  main.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  connection.rs  filter_stats.rs  lib.rs  logging.rs  main.rs  room.rs  sanitize.rs  sensitive_filter.rs  server.rs  session.rs  state.rs  ws.rs
server/tests/: connection_test.rs  integration_auth.rs  integration_discovery.rs  integration_error_codes.rs  integration_heartbeat.rs  integration_room.rs  integration_signaling.rs  integration_theater.rs  invite_handlers_test.rs  room_handlers_test.rs  signal_router_test.rs
(+463 files in other folders)
