[workspace]
members = ["message", "server", "client"]
resolver = "2"

# =============================================================================
# Workspace Shared Dependencies
# =============================================================================
[workspace.dependencies]
# Serialization
bitcode = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Channels
futures-channel = "0.3"

# Async Runtime & Networking
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
aho-corasick = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Authentication
argon2 = "0.5"
jsonwebtoken = { version = "10.0", features = ["aws_lc_rs"] }

# HTTP
tower-http = { version = "0.6", features = ["cors", "trace"] }

# WASM Frontend
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.13"
leptos_meta = "0.8.6"
leptos_i18n = { version = "0.6.1", features = ["csr"] }
leptos_i18n_build = { version = "0.6.1", features = ["csr"] }

# WASM Bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
gloo-timers = { version = "0.4.0", features = ["futures"] }

# Internal Crates
message = { path = "message" }

# =============================================================================
# Workspace Lints — Unified Clippy and Rustc Rules
# =============================================================================
[workspace.lints.rust]
dead_code = "allow"
unsafe_code = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# The following rules are relaxed for WASM environment or project style
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
unused_self = "allow"

# =============================================================================
# Release Profile — WASM Optimization
# =============================================================================
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
