[workspace]
members = ["message", "server", "frontend", "css-processor"]
resolver = "2"

[workspace.package]
authors = ["WebRTC Chat Team"]
edition = "2024"
license = "MIT"
repository = "https://github.com/webrtc-chat/webrtc-chat"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
# Async runtime
tokio = {version = "1.52.0", features = ["full"]}

# Web framework
axum = {version = "0.8.9", features = ["ws", "macros"]}
axum-extra = {version = "0.12.6", features = ["typed-header"]}
tower = {version = "0.5.3", features = ["util"]}
tower-http = {version = "0.6.8", features = ["fs", "cors", "trace"]}

# Serialization
bitcode = {version = "0.6.9", features = ["serde", "uuid"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

# Frontend framework (WASM)
leptos = "0.8.17"
leptos_i18n = "0.6.2"
leptos_meta = "0.8"
leptos_router = "0.8"

# WASM bindings
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = "0.3.95"

# Logging and tracing
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = {version = "0.3.23", features = ["env-filter", "json"]}

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# UUID and identifiers
uuid = {version = "1.23.0", features = ["v4", "v5", "serde"]}

# Cryptography
argon2 = {version = "0.5.3", features = ["std"]}
base64 = "0.22.1"
getrandom = {version = "0.4.2", features = ["wasm_js"]}
hmac = "0.13.0"
jsonwebtoken = {version = "10.3.0", features = ["aws_lc_rs"]}
rand = "0.10.1"
sha2 = "0.11.0"
# Data structures
dashmap = "6.1"
indexmap = "2.14.0"
smallvec = {version = "1.15.1", features = ["serde"]}

# Time handling
chrono = {version = "0.4.44", features = ["serde"]}
time = "0.3.47"

# Validation
validator = {version = "0.20", features = ["derive"]}

# Async utilities
async-trait = "0.1.89"
futures = "0.3.32"
pin-project-lite = "0.2.17"
tokio-util = {version = "0.7.18", features = ["rt"]}

# Testing
criterion = "0.8.2"
serial_test = "3.4.0"
tempfile = "3.27.0"
tokio-tungstenite = "0.29.0"
wasm-bindgen-test = "0.3.68"

# Build tools
trunk = "0.21.14"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = {level = "deny", priority = -1}
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
pedantic = {level = "deny", priority = -1}
return_self_not_must_use = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.release.package.chat-frontend]
opt-level = "z"

[profile.bench]
debug = true
inherits = "release"
strip = false

[profile.dev]
debug = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
