[package]
name = "chat-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework (CSR + WASM)
leptos = { version = "0.8.17", features = ["csr"] }
leptos_meta = "0.8.6"
leptos_router = "0.8.13"
leptos_i18n = { version = "0.6.2", features = ["csr"] }

# Icon library
leptos_icons = "0.7.1"
icondata = "0.7.0"

js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date & time
chrono = { version = "0.4.44", features = ["wasmbind"] }

# Base64 decoding (JWT payload) — replaces window.atob() for correct UTF-8 handling
base64 = "0.22"

# UUID generation (js feature enables wasm-bindgen support)
uuid = { version = "1.23.0", features = ["js", "v4"] }

# Bitcode codec for binary WebSocket messages
bitcode = "0.6.9"

# Async utilities (join_all for concurrent broadcast). Frontend is WASM, so
# we disable futures' default `executor`/`thread-pool` features to avoid
# pulling in std thread-based code paths.
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }

# SHA-256 for native unit tests (WASM uses SubtleCrypto via web-sys).
sha2 = { workspace = true }

# Hex encoding / decoding (file hash persistence)
hex = "0.4"

# Shared message crate (includes signaling, datachannel, etc.)
message = { path = "../message", features = ["wasm"] }

# Web APIs (WebRTC, IndexedDB, etc.)
[dependencies.web-sys]
version = "0.3.95"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Navigator",
  "Location",
  "Storage",
  "MediaQueryList",
  "MediaQueryListEvent",
  "Performance",
  "PerformanceEntry",
  "PerformanceNavigation",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "KeyboardEvent",
  # WebSocket & Signaling
  "WebSocket",
  "BinaryType",
  "CloseEvent",
  "MessageEvent",
  "ErrorEvent",
  "Event",
  "DomException",
  # HTTP Fetch API
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  # WebRTC
  "RtcPeerConnection",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceServer",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcDataChannelEvent",
  "RtcStatsReport",
  "RtcSdpType",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "RtcRtpSender",
  "MediaDevices",
  "MediaDeviceInfo",
  "DisplayMediaStreamConstraints",
  "MediaTrackConstraints",
  "ConstrainDoubleRange",
  "ConstrainDomStringParameters",
  "HtmlVideoElement",
  "CssStyleDeclaration",
  # Web Audio (call VAD, Req 7.3)
  "AudioContext",
  "AudioContextOptions",
  "AnalyserNode",
  "AudioNode",
  "AudioDestinationNode",
  "AudioParam",
  "MediaStreamAudioSourceNode",
  # Voice recording (Task 16 — Opus capture + waveform)
  "MediaRecorder",
  "MediaRecorderOptions",
  "BlobEvent",
  "RecordingState",
  # RtcRtpReceiver & transceiver API (Req 3: seamless audio/video switch)
  "RtcRtpReceiver",
  "RtcRtpTransceiver",
  "RtcTrackEvent",
  # Web Crypto API
  "Crypto",
  "CryptoKey",
  "SubtleCrypto",
  "Algorithm",
  "AesKeyGenParams",
  "AesGcmParams",
  "EcKeyGenParams",
  "EcdhKeyDeriveParams",
  "HkdfParams",
  # Additional WebRTC features needed for methods
  "RtcDataChannelState",
  "RtcSignalingState",
  "console",
  # Chat UI (Task 16)
  "HtmlTextAreaElement",
  "HtmlInputElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "HtmlImageElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollLogicalPosition",
  "Clipboard",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "File",
  "FileList",
  "FileReader",
  "ClipboardEvent",
  "DragEvent",
  "InputEvent",
  "FocusEvent",
  "PointerEvent",
  "MouseEvent",
  # Cache API (sticker asset caching, Task 16 P8)
  "Cache",
  "CacheStorage",
  # IndexedDB (Task 17 — message persistence)
  "IdbFactory",
  "IdbDatabase",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbRequestReadyState",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbIndex",
  "IdbIndexParameters",
  "IdbVersionChangeEvent",
  "IdbKeyRange",
  "IdbCursor",
  "IdbCursorDirection",
  "IdbCursorWithValue",
  "StorageManager",
  "StorageEstimate",
  "ResizeObserver",
  "ResizeObserverEntry",
  "DomRectReadOnly",
  # Browser Notification API (Req 7.4 — incoming-call OS notification)
  "Notification",
  "NotificationOptions",
  "NotificationPermission",
  "VisibilityState",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.68"

[build-dependencies]
leptos_i18n_build = { version = "0.6.2", features = ["csr"] }
leptos_i18n_parser = "0.6.2"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "zh-CN"]

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_i18n/csr"]
