[package]
name = "message"
version = "0.1.0"
edition = "2024"
description = "WebRTC chat application — shared protocol and message type definitions"

[dependencies]
bitcode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
nanoid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
