[package]
name = "message"
description = "Shared message types and binary protocol for WebRTC Chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "message"

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen", "js-sys", "getrandom/wasm_js", "console_error_panic_hook"]

[dependencies]
# Serialization
bitcode.workspace = true
serde.workspace = true
serde_json.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# WASM bindings (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

# WASM panic handling (optional)
console_error_panic_hook = { version = "0.1.7", optional = true }

# Crypto utilities
rand = { workspace = true }
getrandom = { workspace = true }

# Data structures
smallvec.workspace = true
indexmap.workspace = true

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

# proptest doesn't support WASM, only include for native
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook = "0.1.7"
uuid = { workspace = true, features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
