[package]
authors.workspace = true
description = "Shared message types and binary protocol for WebRTC Chat"
edition.workspace = true
license.workspace = true
name = "message"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "message"

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen", "js-sys", "getrandom/wasm_js", "console_error_panic_hook"]

[dependencies]
# Serialization
bitcode.workspace = true
serde.workspace = true
serde_json.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# WASM bindings (optional)
js-sys = {workspace = true, optional = true}
wasm-bindgen = {workspace = true, optional = true}

# WASM panic handling (optional)
console_error_panic_hook = { version = "0.1.7", optional = true }

# Crypto utilities
getrandom = {workspace = true}
rand = {workspace = true}

# Data structures
indexmap.workspace = true
smallvec.workspace = true

[dev-dependencies]
wasm-bindgen-test = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys.workspace = true
uuid = {workspace = true, features = ["js"]}
wasm-bindgen.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
