[package]
edition = "2021"
name = "sdp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
log = "0.4.20"
message = {path = "../message"}
nanoid = {workspace = true}
sender-sink = "0.2.1"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.21.0"
