[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "WebRTC chat application — signaling server (Axum + WebSocket)"

[dependencies]
message = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
bitcode = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tower-http = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
aho-corasick = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.29.0"

[lints]
workspace = true
