[package]
name = "server"
description = "WebRTC Chat signaling server built with Axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Cryptography
argon2.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
dashmap.workspace = true
indexmap.workspace = true
smallvec.workspace = true

# Validation
validator.workspace = true

# Async utilities
futures.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true
tokio-util.workspace = true

# Binary serialization
bitcode.workspace = true

# Internal crates
message = { path = "../message" }

[dev-dependencies]
http-body-util = "0.1.3"
proptest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-specific dependencies
